make Dockerfile with which train/test scripts work

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,12 @@
 *
-!data
 !lib
+!data/kitti_split1/devkit
+!data/kitti_split1/setup_split.py
+!data/kitti_split1/test.txt
+!data/kitti_split1/train.txt
+!data/kitti_split1/trainval.txt
+!data/kitti_split1/val.txt
+!data/kitti_split2/devkit
+!data/kitti_split2/kitti_ids_new.mat
+!data/kitti_split2/setup_split.py
+!docker/requirements.txt
